# ferrumdeck

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  IMPORT_CHECK_SUMMARY.md  LICENSE  Makefile  PACKAGE_VERIFICATION_REPORT.md  PRODUCT_DOCUMENTATION.md  QUICKSTART.md  README.md  SECURITY.md  check_imports.sh  pyproject.toml  verify_packages.py
.github/workflows/: ci.yml  evals.yml
artifacts/run_01KD6BYVPC5B50MD4HSRWACD8N/artifacts/c12ced22f3c53a69/: content  metadata.json
artifacts/run_01KD8YV1D6C7HCQVP7TXHT8SZR/artifacts/cd38674e9fe1cb1e/: content  metadata.json
config/: mcp-config.json
contracts/jsonschema/: policy.schema.json  run.schema.json  tool-version.schema.json  tool.schema.json  workflow.schema.json
contracts/openapi/: control-plane.openapi.yaml
db/migrations/: 20241223000001_initial_schema.sql  20241223000002_seed_dev_data.sql  20241224000001_add_workflows.sql  20241225000001_add_policy_statuses.sql  20241226000001_add_workflow_triggers.sql  20241226000002_add_pgvector.sql  20241226000003_add_tenant_quotas.sql  20250104000001_add_performance_indexes.sql  20250111000001_add_airlock_tables.sql
deploy/dashboard/: index.html
deploy/docker/: Dockerfile  Dockerfile.gateway  Dockerfile.worker  compose.dev.yaml  compose.prod.yaml  init-db.sql
deploy/k8s/base/: configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  kustomization.yaml  worker-deployment.yaml
deploy/k8s/overlays/production/: hpa.yaml  ingress.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml
deploy/k8s/overlays/staging/: hpa.yaml  ingress.yaml  kustomization.yaml
docs/: TESTING_IMPLEMENTATION.md  TESTING_PLAN.md  TEST_REPORT.md  index.md
docs/adr/: 0001-control-data-plane-separation.md  0002-redis-streams-for-queues.md  0003-deny-by-default-tools.md  0004-otel-genai-conventions.md
docs/architecture/: overview.md
docs/runbooks/: database-migration.md  gateway-scaling.md  incident-response.md  worker-failure-recovery.md
docs/security/: threat-model.md
evals/: CLAUDE.md
evals/agents/safe-pr-agent/: config.yaml
evals/datasets/safe-pr-agent/: tasks.jsonl
evals/suites/: regression.yaml  smoke.yaml
examples/safe-pr-agent/: agent.yaml  workflow.yaml
nextjs/: .dockerignore  CLAUDE.md  Dockerfile  TEST_PLAN.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tsconfig.json
nextjs/refactor/: plan.md  state.json
nextjs/src/__tests__/accessibility/: aria-labels.test.tsx  color-contrast.test.tsx  focus-management.test.tsx  semantic-html.test.tsx
nextjs/src/__tests__/hooks/: use-approvals.test.tsx  use-runs.test.tsx
nextjs/src/__tests__/interactions/: button-click.test.tsx  dialog.test.tsx  dropdown.test.tsx  form-input.test.tsx  keyboard.test.tsx
nextjs/src/__tests__/rendering/: badge.test.tsx  button.test.tsx  empty-state.test.tsx  index.test.tsx  run-status-badge.test.tsx
nextjs/src/__tests__/responsive/: layout.test.tsx  sidebar.test.tsx  (+2 more)
nextjs/src/app/: globals.css  layout.tsx
nextjs/src/hooks/: use-admin.ts  use-agents.ts  use-api-keys.ts  use-approvals.ts  use-audit.ts  use-evals.ts  use-is-mounted.ts  use-policies.ts  use-runs.ts  use-security.ts  use-tools.ts  use-workflows.ts
nextjs/src/lib/: query-client.ts  type-guards.ts  utils.ts
nextjs/src/types/: agent.ts  api-key.ts  approval.ts  audit.ts  eval.ts  index.ts  policy.ts  run.ts  security.ts  tool.ts  workflow.ts
observability/otel/: collector.yaml
python/: CLAUDE.md
rust/: CLAUDE.md
rust/crates/fd-audit/: CLAUDE.md  Cargo.toml
rust/crates/fd-audit/src/: event.rs  lib.rs  redaction.rs
rust/crates/fd-core/: CLAUDE.md  Cargo.toml
rust/crates/fd-core/src/: config.rs  error.rs  id.rs  lib.rs  time.rs
rust/crates/fd-dag/: CLAUDE.md  Cargo.toml
rust/crates/fd-dag/src/: lib.rs  scheduler.rs
rust/crates/fd-otel/: CLAUDE.md  Cargo.toml
rust/crates/fd-otel/src/: genai.rs  lib.rs  setup.rs
rust/crates/fd-policy/: CLAUDE.md  Cargo.toml
rust/crates/fd-policy/src/: budget.rs  decision.rs  engine.rs  lib.rs  rules.rs
rust/crates/fd-policy/src/airlock/: config.rs  exfiltration.rs  inspector.rs  mod.rs  patterns.rs  velocity.rs
rust/crates/fd-registry/: CLAUDE.md  Cargo.toml
rust/crates/fd-storage/: CLAUDE.md  Cargo.toml
rust/crates/fd-storage/src/: lib.rs  migrations.rs  pool.rs  queue.rs
rust/crates/fd-storage/src/models/: agents.rs  api_keys.rs  audit.rs  mod.rs  policies.rs  quotas.rs  runs.rs  steps.rs  threats.rs  tools.rs  workflows.rs
rust/crates/fd-storage/src/repos/: agents.rs  api_keys.rs  audit.rs  mod.rs  policies.rs  quotas.rs  runs.rs  steps.rs  threats.rs  tools.rs  workflows.rs
rust/services/gateway/: Cargo.toml
rust/services/gateway/src/: main.rs  openapi.rs  routes.rs  state.rs
rust/services/gateway/src/handlers/: api_keys.rs  approvals.rs  health.rs  mod.rs  orchestrator.rs  policies.rs  registry.rs  runs.rs  security.rs  tests.rs  workflows.rs
rust/services/gateway/src/middleware/: auth.rs  mod.rs  oauth2.rs  rate_limit.rs  request_id.rs
scripts/: gen_openapi.sh  gen_schemas.sh  run-evals.sh  setup.sh  start-dev.sh
security-scan/: plan.md  state.json
src/ferrumdeck/: __init__.py
tests/: __init__.py
tests/api/: __init__.py  conftest.py  test_backwards_compatibility.py  test_contract_consistency.py  test_schema_validation.py
tests/chaos/: __init__.py  conftest.py  test_failure_injection.py  test_recovery.py
tests/e2e/: __init__.py  conftest.py  test_agent_runs.py  test_agent_scenarios.py  test_dashboard.py  test_multi_tenant.py
tests/integration/: __init__.py  conftest.py  test_dag_orchestration.py  test_database.py  test_e2e_workflow.py  test_mcp.py  test_redis.py  test_worker.py  test_workflow_integration.py
tests/performance/: __init__.py  conftest.py  test_benchmark.py  test_latency.py  test_load.py  test_scalability.py
tests/security/: __init__.py  conftest.py  test_airlock.py  test_audit_trail.py  test_authentication.py  test_input_validation.py  test_owasp_llm.py  test_policy_engine.py
(+193 files in other folders)
