[workspace]
resolver = "2"
members = [
    "rust/crates/*",
    "rust/services/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/ferrumdeck/ferrumdeck"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs and time
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# HTTP client (for workers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "streams"] }

# Crypto
sha2 = "0.10"

# Regex
regex = "1.11"
jsonwebtoken = "9.3"
base64 = "0.22"

# Decimal precision for financial calculations
rust_decimal = { version = "1.36", features = ["serde"] }

# Testing
tokio-test = "0.4"
fake = { version = "3.0", features = ["derive"] }

# Internal crates
fd-dag = { path = "rust/crates/fd-dag" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
