[project]
name = "ferrumdeck"
version = "0.1.0"
description = "AgentOps Control Plane - Python Runtime"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "FerrumDeck Team" }]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "python/packages/*",
]

[tool.uv.sources]
fd-runtime = { workspace = true }
fd-worker = { workspace = true }
fd-mcp-router = { workspace = true }
fd-evals = { workspace = true }
fd-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["fd_runtime", "fd_worker", "fd_mcp_router", "fd_evals", "fd_cli"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
# Suppress unknown type warnings from third-party libraries without stubs
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/packages"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ferrumdeck"]
