[package]
name = "fd-dag"
version = "0.1.0"
edition = "2021"
description = "DAG scheduler for workflow orchestration in FerrumDeck"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
