[package]
name = "fd-policy"
description = "FerrumDeck policy engine: allowlists, budgets, approvals, Airlock security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fd-core = { path = "../fd-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Airlock dependencies
regex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
