[package]
name = "fd-storage"
description = "FerrumDeck storage layer: PostgreSQL repositories and migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fd-core = { path = "../fd-core" }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
ulid = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Decimal precision
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
